microservice_python/cron-deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: host-python2
spec:
  replicas: 2
  minReadySeconds: 15
  strategy:
    type: RollingUpdate
    rollingUpdate: 
      maxUnavailable: 1
      maxSurge: 1 
  template:
    metadata:
      labels:
        app: host-python2
    spec:
      containers:
        - image: icsaksregistry.azurecr.io/aspnetapp:latest
          imagePullPolicy: Always
          name: host-details1        
    
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      imagePullSecrets:
      - name: icsaksregistry
