microservice_python/istio-deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: host-python-istio2
spec:
  replicas: 1
  minReadySeconds: 15
  strategy:
    type: RollingUpdate
    rollingUpdate: 
      maxUnavailable: 1
      maxSurge: 1 
  template:
    metadata:
      labels:
        app: host-python-istio
    spec:
      containers:
        - image: shubhadag123/host-python-logic
          imagePullPolicy: Always
          name: host-details-logic
          ports:
            - containerPort: 5000
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
