microservice_python/spring-deployment-istio.yaml
{
  "kind": "Deployment",
  "apiVersion": "extensions/v1beta1",
  "metadata": {
    "name": "hostdetails-spring2",
    "namespace": "istio-system",
    "selfLink": "/apis/extensions/v1beta1/namespaces/default/deployments/hostdetails-spring2",
    "uid": "e8b768a6-6cc6-11e9-9817-62a19a130d0e",
    
    "generation": 10,
    "creationTimestamp": "2019-05-02T10:41:57Z",
    "labels": {
      "app": "hostdetails-spring2"
    },
    "annotations": {
      "deployment.kubernetes.io/revision": "10",
      "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"extensions/v1beta1\",\"kind\":\"Deployment\",\"metadata\":{\"annotations\":{},\"name\":\"hostdetails-spring2\",\"namespace\":\"default\"},\"spec\":{\"minReadySeconds\":15,\"replicas\":2,\"strategy\":{\"rollingUpdate\":{\"maxSurge\":1,\"maxUnavailable\":1},\"type\":\"RollingUpdate\"},\"template\":{\"metadata\":{\"labels\":{\"app\":\"hostdetails-spring2\"}},\"spec\":{\"containers\":[{\"env\":[{\"name\":\"SA_LOGIC_API_URL\ [...]
    }
  },
  "spec": {
    "replicas": 2,
    "selector": {
      "matchLabels": {
        "app": "hostdetails-spring2"
      }
    },
    "template": {
      "metadata": {
        "creationTimestamp": null,
        "labels": {
          "app": "hostdetails-spring2"
        }
      },
      "spec": {
        "containers": [
          {
            "name": "spring-hostdetails",
            "image": "icsaksregistry.azurecr.io/spring:309",
            "ports": [
              {
                "containerPort": 8080,
                "protocol": "TCP"
              }
            ],
            "env": [
              {
                "name": "SA_LOGIC_API_URL",
                "value": "http://sa-logic"
              }
            ],
            "resources": {},
            "terminationMessagePath": "/dev/termination-log",
            "terminationMessagePolicy": "File",
            "imagePullPolicy": "Always"
          }
        ],
        "restartPolicy": "Always",
        "terminationGracePeriodSeconds": 30,
        "dnsPolicy": "ClusterFirst",
        "securityContext": {},
        "imagePullSecrets": [
          {
            "name": "icsaksregistry"
          }
        ],
        "schedulerName": "default-scheduler"
      }
    },
    "strategy": {
      "type": "RollingUpdate",
      "rollingUpdate": {
        "maxUnavailable": 1,
        "maxSurge": 1
      }
    },
    "minReadySeconds": 15,
    "revisionHistoryLimit": 10,
    "progressDeadlineSeconds": 2147483647
  },
  "status": {
    "observedGeneration": 10,
    "replicas": 2,
    "updatedReplicas": 2,
    "readyReplicas": 2,
    "availableReplicas": 2,
    "conditions": [
      {
        "type": "Available",
        "status": "True",
        "lastUpdateTime": "2019-11-13T10:47:00Z",
        "lastTransitionTime": "2019-11-13T10:47:00Z",
        "reason": "MinimumReplicasAvailable",
        "message": "Deployment has minimum availability."
      }
    ]
  }
}
