microservice_python/cron-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: host-python2
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 5000
  selector:
    app: host-python2
  type: LoadBalancer
