microservice_python/istio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: host-python-istio2
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 5000
  selector:
    app: host-python-istio2
