microservice_python/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: host-python
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 5000
  selector:
    app: host-python
