microservice_python/ingresspython.yaml
{
  "kind": "Ingress",
  "apiVersion": "extensions/v1beta1",
  "metadata": {
    "name": "test",
    "namespace": "default",
    "selfLink": "/apis/extensions/v1beta1/namespaces/default/ingresses/test"
  },
  "spec": {
    "tls": [
      {
        "secretName": "tls-secret"
      }
    ],
    "rules": [
      {
        "http": {
          "paths": [
            {
              "path": "/pythonlogic",
              "backend": {
                "serviceName": "host-python1",
                "servicePort": 80
              }
            }
          ]
        }
      }
    ]
  }
  
}
